Fixed letter spacing bug

--- a/style.css
+++ b/style.css
@@ -518,6 +518,10 @@ body.darkmode .testimonial {
     display: flex;
 }
 
+.description .left, .description .right {
+    flex-basis: 50%;
+}
+
 .desc-heading {
     font-family: "Figtree", sans-serif;
     font-size: 2rem;
@@ -553,7 +557,7 @@ body.darkmode .testimonial {
 }
 
 .about-skills {
-    margin: 76px 129.5px 66px 0px;
+    margin: 76px 129px 66px 0px;
 }
 .about-passion {
     margin: 176px 0px 175px 82px;
@@ -567,7 +571,7 @@ body.darkmode .testimonial {
 }
 
 .desc-img {
-    width: 733px;
+    width: 100%;
     height: 100%;
 }
 
@@ -576,6 +580,7 @@ body.darkmode .testimonial {
     top: 0;
     right: 0;
 }
+
 /* END OF ABOUT ME SECTION */
 footer {
     background: #292929;
@@ -692,6 +697,14 @@ footer {
     .wrapper {
         max-width: 824px;
     }
+
+    .nav-content ul, .theme {
+        display: none;
+    }
+
+    .mobile-nav {
+        display: block;
+    }
 }
 
 @media screen and (max-width: 768px) {
@@ -712,14 +725,6 @@ footer {
 
     .wrapper {
         max-width: 385px;
-    }
-
-    .nav-content ul, .theme {
-        display: none;
-    }
-
-    .mobile-nav {
-        display: block;
     }
 
     .hero .left {
